syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Go-Marketplace/backend/proto/gen/cart;cart";

package cart;

service Cart {
    rpc GetUserCart(GetUserCartRequest) returns (CartResponse);
    rpc CreateCart(CreateCartRequest) returns (CartResponse);
    rpc DeleteCart(DeleteCartRequest) returns (DeleteCartResponse);
    rpc DeleteCartCartlines(DeleteCartCartlinesRequest) returns (CartResponse);

    rpc CreateCartline(CreateCartlineRequest) returns (CartlineResponse);
    rpc UpdateCartline(UpdateCartlineRequest) returns (CartResponse);
    rpc DeleteCartline(DeleteCartlineRequest) returns (CartResponse);
}

message GetUserCartRequest {
    string user_id = 1;
}

message CreateCartRequest {
    string user_id = 1;
}

message CreateCartlineRequest {
    string user_id = 1;
    string product_id = 2;
    string name = 3;
}

message UpdateCartlineRequest {
    string user_id = 1;
    string product_id = 2;
    string name = 3;
    int64 quantity = 4;
}

message DeleteCartlineRequest {
    string user_id = 1;
    string product_id = 2;
}

message DeleteCartRequest {
    string user_id = 1;
}

message DeleteCartCartlinesRequest {
    string user_id = 1;
}

message CartResponse {
    string user_id = 1;
    repeated CartlineResponse cartlines = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CartlineResponse {
    string user_id = 1;
    string product_id = 2;
    string name = 3;
    int64 quantity = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message DeleteCartResponse {}
